<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item android:title="HOME">
            <menu>
                <item
                    android:id="@+id/nav_my_schedule"
                    android:icon="@drawable/calendar"
                    android:title="My Schedule" />
                <item
                    android:id="@+id/nav_announcement"
                    android:icon="@drawable/nav_announcement"
                    android:title="Announcements"
                    app:actionLayout="@layout/menu_counter"
                    app:actionViewClass="android.widget.TextView" />
                <item
                    android:id="@+id/nav_checkinout"
                    android:icon="@drawable/nav_dtr"
                    android:title="Time In/Out" />
                <item
                    android:id="@+id/nav_inventory"
                    android:icon="@drawable/nav_inventory"
                    android:title="@string/Inventory" />
                <item
                    android:id="@+id/nav_osa"
                    android:icon="@drawable/nav_barcode"
                    android:title="@string/OSA"
                   />
                <item
                    android:id="@+id/nav_freshness"
                    android:icon="@drawable/nav_delivery"
                    android:title="@string/freshness"
                   />
                <item
                    android:id="@+id/nav_nearly_expired"
                    android:icon="@drawable/nav_alarm"
                    android:title="@string/NearlyExpire" />
                <item
                    android:id="@+id/nav_expenses"
                    android:icon="@drawable/nav_peso"
                    android:title="Expenses" />
                <item
                    android:id="@+id/nav_priceChange"
                    android:icon="@drawable/nav_survey"
                    android:title="@string/PriceChange" />
<!--                <item-->
<!--                    android:id="@+id/nav_restartIcons"-->
<!--                    android:title="@string/resetIcon" />-->
            </menu>
        </item>
        <!--<item
            android:id="@+id/nav_checkInOut"
            android:icon="@drawable/ic_check_black_24dp"
            android:title="@string/CheckInOut" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_inventory_black_24dp"
            android:title="@string/Inventory" />-->

    </group>

    <item android:title="SYNCING">
        <menu>
            <item
                android:id="@+id/nav_logs"
                android:icon="@drawable/nav_hrglass"
                android:title="@string/logs"
                app:actionLayout="@layout/menu_counter"
                app:actionViewClass="android.widget.TextView" />
            <item
                android:id="@+id/nav_sync_data"
                android:icon="@drawable/nav_sync"
                android:title="Sync Data to Portal" />
        </menu>
    </item>

    <item android:title="REQUEST">
        <menu>
            <item
                android:id="@+id/nav_request_overtime"
                android:icon="@drawable/nav_ot"
                android:title="Request Overtime" />
            <item
                android:id="@+id/nav_request"
                android:icon="@drawable/nav_change_sched"
                android:title="Change Schedule" />
            <item
                android:id="@+id/nav_request_deviation"
                android:icon="@drawable/nav_deviation"
                android:title="Deviation" />
            <item
                android:id="@+id/nav_leave_request"
                android:icon="@drawable/nav_absence"
                android:title="Absence Request" />
            <item
                android:id="@+id/nav_request_status"
                android:icon="@drawable/nav_request_status"
                android:title="Request Status" />
        </menu>
    </item>

    <item android:title="ONLINE REPORTS">
        <menu>
            <item
                android:id="@+id/nav_review_dtr"
                android:icon="@drawable/nav_review_dtr"
                android:title="Review DTR" />
            <item
                android:id="@+id/nav_payslip"
                android:icon="@drawable/nav_payslip"
                android:title="Payslip" />
        </menu>
    </item>

    <item android:title="ABOUT">
        <menu>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/nav_feedback"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_changePassword"
                android:icon="@drawable/nav_change_sched"
                android:title="@string/ChangePassword" />
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/nav_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_faq"
                android:icon="@drawable/faq"
                android:title="FAQs" />
            <item
                android:id="@+id/nav_update_appdata"
                android:icon="@drawable/ic_system_update_black_18dp"
                android:title="@string/update_app_data"
                android:visible="false" />
            <item
                android:id="@+id/nav_logOut"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/LogOut" />

        </menu>
    </item>

    <item android:title="SETTINGS">
        <menu>
            <item
                android:id="@+id/nav_change_ip_address"
                android:icon="@drawable/wifi_signal"
                android:title="@string/change_ip_address" />
        </menu>
    </item>

    <!--
    1st - beta_1_22_05_19_12
    2nd - beta_1_22_13_06_19
    -->


</menu>
