<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyDarken4">

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/faqs"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:background="@drawable/update_maps"/>

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/faqs2"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:layout_gravity="center"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:background="@drawable/nostore"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/faqs3"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <TextView
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/faqs4"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>